syntax = "proto3";

package auth;

option go_package = "github.com/Babushkin05/simple-marketplace/auth-service/api/proto;proto";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);

  rpc Login(LoginRequest) returns (LoginResponse);

  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

message RegisterRequest {
  string login = 1;
  string password = 2;
}

message RegisterResponse {
  string user_id = 1;
  string login = 2;
}

message LoginRequest {
  string login = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  string user_id = 1;
  string login = 2;
  bool valid = 3;
}
